Alignment fix

--- a/src/app/admin-main-layout/content/product-list/product-list.component.css
+++ b/src/app/admin-main-layout/content/product-list/product-list.component.css
@@ -53,7 +53,6 @@
 .action_links ul li a {
   line-height: 40px;
   width: 50px;
-  /* text-align: center; */
   font-size: 18px;
   display: inline-block;
   text-decoration: none;
@@ -116,11 +115,11 @@
 }
 
 .card-holder {
-  width: 22rem;
+  width: 30%;
 }
 
 .card-holder-user {
-  width: 18rem;
+  width: 30%;
 }
 
 .card-height-24 {
